Fix circle alignment and unify sizes across scenes 5, 6, 7

--- a/style.css
+++ b/style.css
@@ -1235,7 +1235,7 @@ body.bg-active {
   background-size: cover;
   background-position: center;
   position: absolute;
-  top: 2.5%;
+  top: 1vw;
   left: 38%;
   transform: translate(-50%, -50%);
   z-index: 5;
@@ -1629,7 +1629,7 @@ body.bg-active {
   background-position: center;
   position: absolute;
   left: 50%;
-  top: 10%;
+  top: 4.33vw;
   transform: translate(-50%, -50%);
   z-index: 2;
   opacity: 1;
@@ -2051,7 +2051,7 @@ body.bg-active {
   background-size: cover;
   background-position: center;
   position: absolute;
-  top: 2.5%;
+  top: 1.2vw;
   left: 38%;
   transform: translate(-50%, -50%);
   z-index: 5;
